feat: fetch groups from keycloak as mailing lists
